--- a/MarsCamera.xcodeproj/xcshareddata/xcschemes/MarsCamera.xcscheme
+++ b/MarsCamera.xcodeproj/xcshareddata/xcschemes/MarsCamera.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EB9DBAF02C726FCB005A0BEA"
+               BuildableName = "MarsCameraTests.xctest"
+               BlueprintName = "MarsCameraTests"
+               ReferencedContainer = "container:MarsCamera.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
